--- a/package.json
+++ b/package.json
@@ -23,10 +23,19 @@
     "@nestjs/common": "^8.0.4",
     "@nestjs/core": "^8.0.4",
     "@nestjs/platform-fastify": "^8.0.4",
+    "@nestjs/swagger": "^5.0.9",
+    "@nestjs/typeorm": "^8.0.1",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
     "fastify": "^3.19.2",
+    "fastify-swagger": "^4.8.3",
+    "mysql2": "^2.2.5",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "tslib": "^2.3.0",
+    "typeorm": "^0.2.34",
+    "typeorm-server-query-builder": "^1.3.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.2",
