--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "class-validator": "^0.13.1",
     "fastify": "^3.19.2",
     "fastify-swagger": "^4.8.3",
-    "mysql2": "^2.2.5",
+    "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
@@ -44,6 +44,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.24",
     "@types/node": "^16.4.3",
+    "@types/pg": "^8",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
