--- a/package.json
+++ b/package.json
@@ -33,11 +33,9 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "ts-node": "^10.1.0",
     "tslib": "^2.3.1",
     "typeorm": "^0.2.34",
-    "typeorm-server-query-builder": "^1.3.1",
-    "typescript": "^4.3.5"
+    "typeorm-server-query-builder": "^1.3.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.2",
@@ -60,7 +58,9 @@
     "ts-jest": "^27.0.4",
     "ts-loader": "^9.2.4",
     "tsconfig-paths": "^3.10.1",
-    "webpack": "^5.46.0"
+    "webpack": "^5.46.0",
+		"ts-node": "^10.1.0",
+		"typescript": "^4.3.5"
   },
   "jest": {
     "moduleFileExtensions": [
